# pres.io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  meson.build  pres.io.files  pres.io.includes  qml.qrc
examples/: fire.qml  flickable.qml  swipeview.qml  warning.qml
qml/: Acronym.qml  Bullets.qml  ChapterTitle.qml  LeftRight.qml  PageColumn.qml  Presentation.qml  ShadedImage.qml  ShadedRectangle.qml  SidebarButton.qml  Snippet.qml  ThePublicAnswers.qml  TitlePage.qml  main.qml
src/: Launcher.cpp  Launcher.h  Printer.cpp  Printer.h  TextModel.cpp  TextModel.h  Util.cpp  Util.h  main.cpp
